[package]
name = "protoserver"
version = "0.1.0"
edition = "2021"

# Enable high optimizations for dependencies:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
primal = "0.3.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }